# th06

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
Documentatie/: copy.sh  project.tex
Documentatie/Agendas/: agenda_18-11-2015.tex  agenda_template.tex
Documentatie/Agendas en Notulen/Agendas/: agenda_18-11-2015.tex  agenda_2-12-2015.tex  agenda_23-11-2015.tex  agenda_template.tex
Documentatie/Agendas en Notulen/Notulen/: Notulen 16-11-2015.docx  Notulen 18-11-2015.tex  Notulen_02-12-2015.tex  Notulen_11-11-2015.tex  Notulen_23-11-2015.tex  Notulen_25-11-2015.tex  notule_template.tex  notulen_template.tex
Documentatie/Interview/: samenvatting_interview_aydin.txt  samenvatting_interview_christiaan.txt  samenvatting_interview_martijn.md  vragenlijst interview.md  vragenlijst interview.txt
Documentatie/LaTeX/: project.tex
Documentatie/LaTeX/Interview/: samenvatting_interview_aydin.txt
Documentatie/LaTeX/Plan van aanpak/: Feedback plan van aanpak.txt  Lijst op te leveren producten.txt  Plan van aanpak.docx  literatuur.bib
Documentatie/LaTeX/Requirements Architecture/: Eisen.txt  ReqArch.tex
Documentatie/Notities/Martijn/: feedback_RA-10-12-2015.md
Documentatie/Notulen & Urenverantwoording/: Notulen 16-11-2015.docx  Voorbeeld notulen.docx  notule_11-11-2015.tex
Documentatie/Notulen & Urenverantwoording/Samenvattingen vergaderingen/: samenvatting vergadering 16-11-2015.txt  samenvatting vergadering 18-11-2015.txt
Documentatie/Plan van aanpak/: Lijst op te leveren producten.txt  Plan van aanpak.docx  algemeen.tex  plan_van_aanpak.tex  planning.tex
Documentatie/Plan van aanpak/Chapters/: Bronvermelding.tex  Inleiding.tex  Kwaliteitsbewaking.tex  Kwaliteitseisen.tex  MoSCoW.tex  Onderzoek.tex  Producten.tex  Projectactiviteiten.tex  Projectorganisatie.tex  Risicos.tex
Documentatie/Requirements Architecture/: ReqArch.tex  klassendiagram.puml  reqarch.sublime-project  statediagram.puml
Documentatie/Requirements Architecture/Chapters/: Functional_Requirements.tex  Non-Functional_requirements.tex
Documentatie/Source/: Makefile  Makefile.inc  copy.sh  webinterface_commandos.txt
Documentatie/Source/Modellen/: activitydiagram.puml  klassendiagram.puml  usecasediagram.puml
Documentatie/Source/Requirements Architecture/: Makefile  ReqArch.tex  feedback_Requirements_Architecture.txt
Documentatie/Source/Solution Architecture/: Solution_Architecutre.tex  authentication_controller.eps  log_controller.eps  settings_controller.eps  solution_architecture.sublime-project  (+1 more)
Documentatie/Teamcontract/: Oude versie teamcontract.docx  team_contract.tex
Notulen/: Notulen 11-11-2015.docx
Software/: CMakeLists.txt
Software/HU-Software/pRTOS/: test.cpp
Software/HU-Software/pRTOS/source/: pRTOS.cpp  pRTOS.h
Software/ServerSocketHandler/: Makefile  ServerSocketHandler.workspace
Software/ServerSocketHandler/ServerSocketHandler/: ServerSocketHandler.mk  ServerSocketHandler.project  ServerSocketHandler.txt  main.cpp
Software/pi/: .gitignore  CMakeLists.txt  pi_run_swirli.sh
Software/pi/cross/tools-master/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/: CMakeLists.txt
Software/pi/cross/tools-master/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/rpi-rootfs/usr/lib/python3/dist-packages/sense_hat/: __init__.py
Software/swirli/: AuthorizationController.cpp  AuthorizationController.h  CMakeLists.txt  Doxyfile  EventGenerator.cpp  EventGenerator.h  LogController.cpp  LogController.h  LogFile.cpp  LogFile.h  SensorListener.h  SettingsController.cpp  SettingsController.h  SwirliListener.cpp  SwirliListener.h  TemperatureController.cpp  TemperatureController.h  TemperatureRegulator.h  UpdateController.cpp  UpdateController.h  WashingController.cpp  WashingController.h  WashingInstruction.cpp  WashingInstruction.h  WashingProgram.cpp  WashingProgram.h  WashingTask.cpp  WashingTask.h  WaterLevelController.cpp  WaterLevelController.h  WaterLevelRegulator.h  WebInterfaceHandler.cpp  WebInterfaceHandler.h  WebSocketHandler.cpp  WebSocketHandler.h  WebSocketPacket.cpp  WebSocketPacket.h  main.cpp  test_main.cpp  websocketreqeusts
Software/swirli/WashingInstructions/: AddSoapInstruction.cpp  AddSoapInstruction.h  SetDoorLockInstruction.cpp  SetDoorLockInstruction.h  SetRPMInstruction.cpp  SetRPMInstruction.h  SetTemperatureInstruction.cpp  SetTemperatureInstruction.h  SetWaterLevelInstruction.cpp  SetWaterLevelInstruction.h  WaitTemperatureInstruction.cpp  WaitTemperatureInstruction.h  WaitTimeInstruction.cpp  WaitTimeInstruction.h  WaitWaterLevelInstruction.cpp  WaitWaterLevelInstruction.h  WashingInstruction.h  WashingProgram.cpp  WashingProgram.h  WashingProgramRunner.cpp  WashingProgramRunner.h  WashingTask.cpp  WashingTask.h
Software/swirli/WashingMachine/: Door.cpp  Door.h  HeatingUnit.cpp  HeatingUnit.h  LED.h  Motor.cpp  Motor.h  Observable.cpp  Observable.h  Pump.cpp  Pump.h  SensorHandler.cpp  SensorHandler.h  SensorListener.h  SignalLed.cpp  SignalLed.h  SoapDispenser.cpp  SoapDispenser.h  TemperatureController.cpp  TemperatureController.h  TemperatureRegulator.h  TemperatureSensor.cpp  TemperatureSensor.h  UARTHandler.cpp  UARTHandler.h  UARTUser.h  WashingMachine.h  WashingMachineBoundary.h  WaterLevelController.cpp  WaterLevelController.h  WaterLevelRegulator.h  WaterLevelSensor.cpp  WaterLevelSensor.h  WaterValve.cpp  WaterValve.h
Software/swirli/WashingPrograms/: bonte_was.json  fijne_was.json  witte_was.json
Software/swirli/libs/: Protocol.h  pRTOS.cpp  pRTOS.h
Software/swirli/libs/googletest-master/googlemock/msvc/2005/: gmock.sln
Software/swirli/libs/googletest-master/googlemock/msvc/2010/: gmock.sln
Software/swirli/libs/googletest-master/googletest/codegear/: gtest_main.cbproj
Software/swirli/libs/googletest-master/googletest/msvc/: gtest.sln
Software/swirli/libs/networking/: broadcaster.cpp  websocket.cpp  websocket.h
Software/webinterface/: index.html  save_settings.php
Software/webinterface/css/: custom.css
Software/webinterface/js/: usersettings.json  wasinterface.js  wasprogrammas.json
(+97 files in other folders)
